Source/WebCore/rendering/RenderBox.cpp
@@ -2055,8 +2055,17 @@ LayoutUnit RenderBox::availableLogicalHeightUsing(const Length& h) const
     if (isTableCell() && (h.isAuto() || h.isPercent()))
         return overrideHeight() - borderAndPaddingLogicalWidth();
 
-    if (h.isPercent())
-       return computeContentBoxLogicalHeight(h.calcValue(containingBlock()->availableLogicalHeight()));
+    if (h.isPercent()) {
+        LayoutUnit availableHeight;
+        // https://bugs.webkit.org/show_bug.cgi?id=64046
+        // For absolutely positioned elements whose containing block is based on a block-level element,
+        // the percentage is calculated with respect to the height of the padding box of that element
+        if (isPositioned())
+            availableHeight = containingBlockLogicalHeightForPositioned(containingBlock());
+        else
+            availableHeight = containingBlock()->availableLogicalHeight();
+        return computeContentBoxLogicalHeight(h.calcValue(availableHeight));
+    }
 
     // FIXME: We can't just check top/bottom here.
     // https://bugs.webkit.org/show_bug.cgi?id=46500
